// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet on iOS renders nothing (the native sheet owns the UI) 1`] = `
{
  "lines": 312,
  "sha256": "8a9613e4a8fba580938973ed9f6f1dc963ad51f42c5385010514b029b1e0e337",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, android 390 1`] = `
{
  "lines": 352,
  "sha256": "9b6352449934cdcd7242edc0d3b66ae93e8213a58039884e8bbf2e8e64fad268",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, web 390 1`] = `
{
  "lines": 352,
  "sha256": "2aa45e457df30ba5dc5210e4c33ab7c67358e24bda39afc2132e651805f9afa3",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, android 390 1`] = `
{
  "lines": 360,
  "sha256": "4478a283f123978e8a979a11aa9bf64d0f9d752f70ce4eb03145aff74855ce69",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, web 390 1`] = `
{
  "lines": 360,
  "sha256": "46132dbea369c1f403261449b686d76b50925a96ea06e322264d9a4f91b5c8d6",
}
`;

exports[`lane B1 — components (golden, 390 phone) RecordPaymentModal, open (iOS) 1`] = `
{
  "lines": 377,
  "sha256": "0fea006309498f73d8251f34f7556952dbbbe483bcdd24d0db0f600cc6a6aa5c",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) budget-dashboard 1`] = `
{
  "lines": 466,
  "sha256": "154ccc2f0b47db9ce39451c7ce30ea3a61a7b266c9d58082e10500787d5da419",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow (no project) 1`] = `
{
  "lines": 732,
  "sha256": "ad7f9d05fe7c57515d7802cf9ef7ba44467236a8646f899be18515a35f6f1f87",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow with a project (balance, expense, payment sheets) 1`] = `
{
  "lines": 736,
  "sha256": "e08808dae6a91265c090f06dca993fe1a37781a6595569f8c318a5220c163bee",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing (commitment editor + phase sheet mounted) 1`] = `
{
  "lines": 775,
  "sha256": "7ea26f40f729e2959ea544dba3a9566efe9111f183048300cfa758bed80a6332",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing: the first phase pressed (PhaseDetailModal open) 1`] = `
{
  "lines": 827,
  "sha256": "0e3b0c31430ca84fb5168d51db95e1bfd27960c555047f5751d9525c6456107f",
}
`;
